doc: update swagger documentation and README
