# models/pet.go
@@ -11,6 +11,7 @@ type WildPet struct {
 }
 
 type Pet struct {
+	// In: path
 	ID         primitive.ObjectID `bson:"_id,omitempty" json:"id,omitempty" example:"1"`
 	PetName    string             `json:"petName" validate:"required"`
 	Hunger     int                `json:"hunger" default:"0"`
@@ -21,4 +22,9 @@ type Pet struct {
 	OwnerID    primitive.ObjectID `json:"ownerID"`
 	Birthday   string             `json:"birthday"`
 	Techniques []string           `json:"techniques"` //TODO change to an array of struct Technique in the future
+}
+
+type CreatePetBody struct {
+	PetName  string `json:"petName" validate:"required"`
+	SpecieID string `json:"specieID" validate:"required"`
 }
