# models/user.go
@@ -11,6 +11,7 @@ type UserID primitive.ObjectID
 // @Description User represents the model  for an User's Data, password is ALWAYS HASHED
 type User struct {
 	// Users ID generated by Mongodb
+	// In: path
 	ID       primitive.ObjectID   `bson:"_id" json:"id,omitempty" example:"1"`
 	Username string               `json:"username,omitempty" validate:"required" example:"ronald123"`
 	Email    string               `json:"email,omitempty" validate:"required" example:"ronald@email.com"`
@@ -26,6 +27,12 @@ type User struct {
 type UserCredentials struct {
 	Username string `json:"username,omitempty" validate:"required" example:"ronald123"`
 	Password string `json:"password,omitempty" validate:"required" example:"aksdmalknj@154/JKNJ"`
+}
+
+type RegisterAnUserBody struct {
+	Username string `json:"username,omitempty" validate:"required" example:"ronald123"`
+	Email    string `json:"email,omitempty" validate:"required" example:"ronald@email.com"`
+	Password string `json:"password" validate:"required" example:"aksdmalknj@154/JKNJ"`
 }
 
 func (user *User) GetUserDetails() map[string]interface{} {
